Refactor auth configuration and middleware
- Comment out unnecessary code in auth.config.ts and auth.ts
- Import auth module in chat and document routes
- Add authentication check in chat and document routes
- Update layout to use authenticated user
- Remove unused middleware code
- Update package.json scripts
- Add check-users and create-admin scripts
- Add page and chat-content components
- Add multimodal-input-content component

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "db:push": "drizzle-kit push",
     "db:pull": "drizzle-kit pull",
     "db:check": "drizzle-kit check",
-    "db:up": "drizzle-kit up"
+    "db:up": "drizzle-kit up",
+    "create-admin": "tsx -r tsconfig-paths/register scripts/create-admin.ts",
+    "check-users": "tsx scripts/check-users.ts"
   },
   "dependencies": {
     "@ai-sdk/openai": "1.0.0-canary.3",
